{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 48,
  "lineage": "4ffb5db2-a95a-7a84-a3d5-0bc303a7744e",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611929345556:network-acl/acl-09976cd7f3a9c8403",
            "default_network_acl_id": "acl-09976cd7f3a9c8403",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09976cd7f3a9c8403",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "611929345556",
            "subnet_ids": [],
            "tags": {
              "Application": "cool_webapp",
              "Name": "cool_webapp-default-acl"
            },
            "vpc_id": "vpc-0364165a3134cda72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611929345556:route-table/rtb-07d07fde29c42996f",
            "default_route_table_id": "rtb-07d07fde29c42996f",
            "id": "rtb-07d07fde29c42996f",
            "owner_id": "611929345556",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0caeb659d653d329c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "cool_webapp",
              "Name": "cool_webapp-main-route-table"
            },
            "vpc_id": "vpc-0364165a3134cda72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-030ac8040030ead0b",
            "domain": "vpc",
            "id": "eipalloc-0dacb6c1b72e44014",
            "network_border_group": "us-east-1",
            "network_interface": "eni-071185edf662d5cca",
            "private_dns": "ip-10-0-1-251.ec2.internal",
            "private_ip": "10.0.1.251",
            "public_dns": "ec2-34-233-101-193.compute-1.amazonaws.com",
            "public_ip": "34.233.101.193",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Application": "cool_webapp"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611929345556:internet-gateway/igw-05bcb9c2c187fa517",
            "id": "igw-05bcb9c2c187fa517",
            "owner_id": "611929345556",
            "tags": {
              "Application": "cool_webapp",
              "Name": "cool_webapp"
            },
            "vpc_id": "vpc-0364165a3134cda72"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dacb6c1b72e44014",
            "id": "nat-0caeb659d653d329c",
            "network_interface_id": "eni-071185edf662d5cca",
            "private_ip": "10.0.1.251",
            "public_ip": "34.233.101.193",
            "subnet_id": "subnet-06931fc3c72dfb91a",
            "tags": {
              "Name": "cool_webapp-nat-gw",
              "Project": "cool_webapp"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611929345556:network-acl/acl-06fb13d547d8fdff8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 65335
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-06fb13d547d8fdff8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 65335
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 433,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 433
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "611929345556",
            "subnet_ids": [
              "subnet-06931fc3c72dfb91a"
            ],
            "tags": {
              "Application": "cool_webapp",
              "Name": "cool_webapp-public-acl"
            },
            "vpc_id": "vpc-0364165a3134cda72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611929345556:route-table/rtb-08c436c13aa91aed6",
            "id": "rtb-08c436c13aa91aed6",
            "owner_id": "611929345556",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05bcb9c2c187fa517",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05bcb9c2c187fa517",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "cool_webapp",
              "Name": "cool_webapp-public-route-table"
            },
            "vpc_id": "vpc-0364165a3134cda72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af4b99352c07ff0b",
            "route_table_id": "rtb-08c436c13aa91aed6",
            "subnet_id": "subnet-06931fc3c72dfb91a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0797f8f1a60942673",
            "route_table_id": "rtb-08c436c13aa91aed6",
            "subnet_id": "subnet-08268434d95633b48"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611929345556:subnet/subnet-05327595fe589dfa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05327595fe589dfa5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611929345556",
            "tags": {
              "Application": "cool_webapp",
              "Name": "cool_webapp-template-private"
            },
            "tags_all": {
              "Application": "cool_webapp",
              "Name": "cool_webapp-template-private"
            },
            "vpc_id": "vpc-0364165a3134cda72"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611929345556:subnet/subnet-03c982d6628b74b7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-03c982d6628b74b7a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611929345556",
            "tags": {
              "Application": "cool_webapp",
              "Name": "cool_webapp-template-private-2"
            },
            "tags_all": {
              "Application": "cool_webapp",
              "Name": "cool_webapp-template-private-2"
            },
            "vpc_id": "vpc-0364165a3134cda72"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611929345556:subnet/subnet-06931fc3c72dfb91a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06931fc3c72dfb91a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "611929345556",
            "tags": {
              "Application": "cool_webapp",
              "Name": "cool_webapp-template-public"
            },
            "tags_all": {
              "Application": "cool_webapp",
              "Name": "cool_webapp-template-public"
            },
            "vpc_id": "vpc-0364165a3134cda72"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611929345556:subnet/subnet-08268434d95633b48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08268434d95633b48",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "611929345556",
            "tags": {
              "Application": "cool_webapp",
              "Name": "cool_webapp-template-public-2"
            },
            "tags_all": {
              "Application": "cool_webapp",
              "Name": "cool_webapp-template-public-2"
            },
            "vpc_id": "vpc-0364165a3134cda72"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611929345556:vpc/vpc-0364165a3134cda72",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09976cd7f3a9c8403",
            "default_route_table_id": "rtb-07d07fde29c42996f",
            "default_security_group_id": "sg-09e7eedfe2db75b23",
            "dhcp_options_id": "dopt-2f7f2555",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0364165a3134cda72",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0e4a3766f5a3a2f04",
            "ipv6_cidr_block": "2600:1f18:244e:bc00::/56",
            "main_route_table_id": "rtb-07d07fde29c42996f",
            "owner_id": "611929345556",
            "tags": {
              "Application": "cool_webapp",
              "Name": "cool_webapp-template-vpc"
            },
            "tags_all": {
              "Application": "cool_webapp",
              "Name": "cool_webapp-template-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a887e401f7654935",
            "arn": "arn:aws:ec2:us-east-1:611929345556:instance/i-0ba0cfe2516edc620",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance_cool_webapp_profile",
            "id": "i-0ba0cfe2516edc620",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ha_webserver",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00fc348b064eb27df",
            "private_dns": "ip-10-0-1-154.ec2.internal",
            "private_ip": "10.0.1.154",
            "public_ip": "3.85.108.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051f3cb49dcf05920",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06931fc3c72dfb91a",
            "tags": {
              "Application": "cool_webapp",
              "Name": "cool_webapp"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0010b41622d633d86"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.this",
            "module.webserver.aws_iam_instance_profile.this",
            "module.webserver.aws_iam_role.this",
            "module.webserver.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a887e401f7654935",
            "arn": "arn:aws:ec2:us-east-1:611929345556:instance/i-01c8929902fa4900e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance_cool_webapp_profile",
            "id": "i-01c8929902fa4900e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ha_webserver",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b54912fa25d0b107",
            "private_dns": "ip-10-0-3-149.ec2.internal",
            "private_ip": "10.0.3.149",
            "public_ip": "54.174.140.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ad8f428264f0972f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08268434d95633b48",
            "tags": {
              "Application": "cool_webapp",
              "Name": "cool_webapp"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0010b41622d633d86"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public2",
            "module.vpc.aws_vpc.this",
            "module.webserver.aws_iam_instance_profile.this",
            "module.webserver.aws_iam_role.this",
            "module.webserver.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:611929345556:loadbalancer/app/coolwebapp/f05fe20ecb27fbd8",
            "arn_suffix": "app/coolwebapp/f05fe20ecb27fbd8",
            "dns_name": "coolwebapp-743436928.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:611929345556:loadbalancer/app/coolwebapp/f05fe20ecb27fbd8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "coolwebapp",
            "security_groups": [
              "sg-0010b41622d633d86"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06931fc3c72dfb91a"
              },
              {
                "subnet_id": "subnet-08268434d95633b48"
              }
            ],
            "subnets": [
              "subnet-06931fc3c72dfb91a",
              "subnet-08268434d95633b48"
            ],
            "tags": {
              "Application": "cool_webapp"
            },
            "vpc_id": "vpc-0364165a3134cda72",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_subnet.public2",
            "module.vpc.aws_vpc.this",
            "module.webserver.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:611929345556:listener/app/coolwebapp/f05fe20ecb27fbd8/587a95d14d81b927",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:611929345556:targetgroup/coolwebapp/b5c32573b6686c6c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:611929345556:listener/app/coolwebapp/f05fe20ecb27fbd8/587a95d14d81b927",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:611929345556:loadbalancer/app/coolwebapp/f05fe20ecb27fbd8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_subnet.public2",
            "module.vpc.aws_vpc.this",
            "module.webserver.aws_lb.this",
            "module.webserver.aws_lb_target_group.this",
            "module.webserver.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:611929345556:targetgroup/coolwebapp/b5c32573b6686c6c",
            "arn_suffix": "targetgroup/coolwebapp/b5c32573b6686c6c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:611929345556:targetgroup/coolwebapp/b5c32573b6686c6c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "coolwebapp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "cool_webapp"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0364165a3134cda72"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance-1-tg-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:611929345556:targetgroup/coolwebapp/b5c32573b6686c6c-20210425021759800500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:611929345556:targetgroup/coolwebapp/b5c32573b6686c6c",
            "target_id": "i-0ba0cfe2516edc620"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.this",
            "module.webserver.aws_iam_instance_profile.this",
            "module.webserver.aws_iam_role.this",
            "module.webserver.aws_instance.public1",
            "module.webserver.aws_lb_target_group.this",
            "module.webserver.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance-2-tg-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:611929345556:targetgroup/coolwebapp/b5c32573b6686c6c-20210425021800079400000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:611929345556:targetgroup/coolwebapp/b5c32573b6686c6c",
            "target_id": "i-01c8929902fa4900e"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public2",
            "module.vpc.aws_vpc.this",
            "module.webserver.aws_iam_instance_profile.this",
            "module.webserver.aws_iam_role.this",
            "module.webserver.aws_instance.public2",
            "module.webserver.aws_lb_target_group.this",
            "module.webserver.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611929345556:security-group/sg-0010b41622d633d86",
            "description": "Allow ssh \u0026 http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0010b41622d633d86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-public-webserver-sg",
            "name_prefix": "",
            "owner_id": "611929345556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "cool_webapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0364165a3134cda72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}